--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=NeoLibrary
+application.title=zlibrary
 application.vendor=Yashitha
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/NeoLibrary.jar
+dist.jar=${dist.dir}/zlibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/NeoLibrary
+dist.jlink.output=${dist.jlink.dir}/zlibrary
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.6.jar=lib\\flatlaf-3.6.jar
@@ -84,7 +84,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=NeoLibrary
+jlink.launcher.name=zlibrary
 main.class=lk.jiat.neolibrary.gui.Home
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
