--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/zlibrary
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=lib\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections4-4.4.jar=lib\\commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
 file.reference.flatlaf-3.6.jar=lib\\flatlaf-3.6.jar
 file.reference.flatlaf-extras-3.6.jar=lib\\flatlaf-extras-3.6.jar
+file.reference.jasperreports-7.0.3.jar=lib\\jasperreports-7.0.3.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.jsvg-1.4.0.jar=lib\\jsvg-1.4.0.jar
 file.reference.mysql-connector-j-8.0.33.jar=lib\\mysql-connector-j-8.0.33.jar
 file.reference.swing-toast-notifications-1.0.4.jar=lib\\swing-toast-notifications-1.0.4.jar
+file.reference.xml-apis-1.4.01-javadoc.jar=lib\\xml-apis-1.4.01-javadoc.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +55,13 @@ javac.classpath=\
     ${file.reference.flatlaf-extras-3.6.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
-    ${file.reference.swing-toast-notifications-1.0.4.jar}
+    ${file.reference.swing-toast-notifications-1.0.4.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.jasperreports-7.0.3.jar}:\
+    ${file.reference.xml-apis-1.4.01-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
